# BookSystem

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp  testdemo.txt
BookService/include/: BookManager.h  BookService.h  MemoryConfig.h
BookService/src/: BookManager.cpp  BookService.cpp
Service/include/: BookManager.h  BookService.h  MemoryConfig.h  UserManager.h
Service/src/: BookManager.cpp  BookService.cpp  UserManager.cpp
UI/include/: SystemUI.h
UI/src/: SystemUI.cpp
User/include/: BookBuyer.h  Borrower.h  UserBase.h
User/src/: BookBuyer.cpp  Borrower.cpp  UserBase.cpp
include/: BookKeeper.h  BookManager.h  BookService.h  MemoryConfig.h  UserBase.h  UserManager.h
src/: BookKeeper.cpp  BookManager.cpp  BookService.cpp  Borrower.cpp  UserManager.cpp
